gl31-master/src/test/deca/context/invalid/sansobjet/wrong_while3.deca
// Description:
//    Typage : condition string
//
// Resultats:
//    Ligne 11: un string n'est pas une condition
//
// Historique:
//    cree le 17/01/2021
{
    string s = "true";
    while(s){
        print("ok");
    }
}

